# masscalculator-docker

./: CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: cmake.yml
daemon/: Dockerfile  README.md  build_docker_masscalculator.sh  run_docker_masscalculator.sh
daemons/: CMakeLists.txt  Dockerfile
daemons/conan-masscalculator-core/: CMakeLists.txt  Dockerfile
daemons/masscalculator-cli/: CMakeLists.txt  Dockerfile
daemons/masscalculator-core/: CMakeLists.txt  Dockerfile  build_docker_masscalculator-core.sh
daemons/masscalculator-gui/: CMakeLists.txt
daemons/masscalculator-yocto/: CMakeLists.txt
docs/: BUILD.md  ENVIRONMENT.md  SETUP.md
tools/: envsetup.sh
